--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,27 @@
 <h1>Hello Angular !!!</h1>
+<p>Header</p>
+<nav>
+    <a routerLink="/">Home</a>
+    <a routerLink="/list">Lista</a>
+    <a routerLink="/two">TwoWay</a>
+    <a routerLink="/event">Eventos</a>
+    <a routerLink="/if">If</a>
+    <a routerLink="/pipe">Pipe</a>
+    <a routerLink="/emitter">Emitter</a>
+    <a routerLink="/directives">Directives</a>
+    <a routerLink="/parent">Parent</a>
+</nav>
 
-<app-first-component [var1] = "var_first"></app-first-component>
+<router-outlet></router-outlet>
+
+<p>Footer</p>
+
+<!--<app-first-component [var1] = "var_first"></app-first-component>
 <app-parent-data [name] = "userName" [userData] = "userData"></app-parent-data>
 <app-directives></app-directives>
 <app-if-render></app-if-render>
 <app-eventos></app-eventos>
+<app-emitter></app-emitter>
+<app-list-render></app-list-render>
+<app-pipes></app-pipes>
+<app-two-way-binding></app-two-way-binding>-->
